Fix for navbar on small screens

--- a/src/components/NavBar/navbar-styles.css
+++ b/src/components/NavBar/navbar-styles.css
@@ -84,7 +84,7 @@
 @media only screen and (max-width: 1080px) {
     .header {
         .navbar {
-            grid-template-columns: repeat(3, 1fr);
+            grid-template-columns: repeat(3, minmax(0, 1fr));
 
             .navitem:first-child {
                 grid-column-start: 1;
@@ -99,14 +99,16 @@
         .navbar {
             .navitem {
                 padding-bottom: 1.5rem;
+                width: calc((((100vw - 4rem) / 3) - (1.25rem / 2)) * 0.985);
 
                 .dropdown {
                     .dropdown-item {
-                        padding-top: 2rem;
-                        padding-bottom: 2rem;
+                        padding-top: calc(var(--row-height) / 2);
+                        padding-bottom: calc(var(--row-height) / 2);
+                        padding-left: 1.25rem;
 
                         &:last-child {
-                            padding-bottom: 2rem;
+                            padding-bottom: calc(var(--row-height) / 2);
                         }
                     }
                 }
